# ktulhu-main

./: .gitignore  Cargo.toml  README.md  build.rs  chat_template.jinja  llama_wrapper.h
config/: allowed_origins.txt  llamacpp.env
docs/: frontend_payment.md  llama-cli-env.md
lang/en/: ambiguity_stopwords.json  casual_markers.json  constraint_patterns.json  contains_advice_patterns.json  contains_culture_keywords.json  keywords.json  prompts.json  reasoning_patterns.json  reasoning_prompts.json  routing_labels.json  starts_with_task_command.json
lang/es/: ambiguity_stopwords.json  casual_markers.json  constraint_patterns.json  contains_advice_patterns.json  contains_culture_keywords.json  keywords.json  prompts.json  reasoning_patterns.json  reasoning_prompts.json  routing_labels.json  starts_with_task_command.json
lang/pt/: ambiguity_stopwords.json  casual_markers.json  constraint_patterns.json  contains_advice_patterns.json  contains_culture_keywords.json  keywords.json  prompts.json  reasoning_patterns.json  reasoning_prompts.json  routing_labels.json  starts_with_task_command.json
lang/ru/: ambiguity_stopwords.json  casual_markers.json  constraint_patterns.json  contains_advice_patterns.json  contains_culture_keywords.json  keywords.json  prompts.json  reasoning_patterns.json  reasoning_prompts.json  routing_labels.json  starts_with_task_command.json
mistral_tokenizer_fixed/: tokenizer_config.json
src/: lib.rs  main.rs  mainWorkingTerminal.rs  manager.rs
src/agent/: mod.rs
src/api/: auth.rs  handlers.rs  mod.rs  types.rs
src/attachments/: mod.rs
src/auth/: apple.rs  email_auth.rs  facebook.rs  google.rs  google_auth.rs  google_keys.rs  handlers.rs  jwt.rs  mod.rs  types.rs  utils.rs
src/classifier/: intent.rs  mod.rs  rag.rs  reasoning_policy.rs  routing.rs  scope.rs
src/classifier/routing/: chat_layer.rs  labels.rs  layer1.rs  mod.rs  task_layer.rs
src/conversation/: mod.rs
src/db/: mod.rs
src/embeddings/: dto.rs  handler.rs  mod.rs  service.rs
src/external_api/: handlers.rs  mod.rs
src/inference/: byte_decoder.rs  intent_router.rs  llama_cpp_service.rs  ministral8_b.rs  ministral_8b_resoning.rs  mistral.rs  mistral.rsBROKEN  mod.rs  phi.rs  roberta.rs  roberta_classifier.rs  roberta_phatic_gate.rs
src/internal_api/: admin.html  auth.rs  devices.html  handlers.rs  mod.rs  storage.rs  types.rs  users.html
src/model/: chat.rs  message.rs  mod.rs  user.rs  user_device.rs
src/payment/: mod.rs
src/prompts/: mod.rs
src/reasoning/: executor.rs  mod.rs  planner.rs  profile.rs  prompts.rs
src/storage/: mod.rs
src/ws/: handler.rs  inference_worker.rs  mod.rs
