[package]
name = "ktulhuMain"
version = "0.1.2"
edition = "2021"

[features]
default = ["intent-router-cuda"]
intent-router-cuda = [
    "candle/cuda",
    "candle-nn/cuda",
    "candle-transformers/cuda",
]

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hf-hub = "0.3"
tokenizers = "0.20"
dirs = "5"
ndarray = "0.15"
axum = { version = "0.8", features = ["ws", "multipart"] }
axum-extra = { version = "0.12", features = ["typed-header"] }
axum-core = "0.4.3"
headers = "0.4"
once_cell = "1"
num_cpus = "1.16"
rand = "0.8"

rocksdb = "0.24.0"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"]}
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
chrono = "0.4.42"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dotenvy = "0.15"
argon2 = { version = "0.5", features = ["std"] }
base64 = "0.22"
byteorder = "1"
regex = "1"
minijinja = "1.0"
bincode = "1.3.3"
candle = { package = "candle-core", version = "0.9.2-alpha.2" }
candle-nn = { version = "0.9.2-alpha.2" }
candle-transformers = { version = "0.9.2-alpha.2" }

[build-dependencies]
bindgen = "0.70"
